Thu Sep 10 06:05:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSFileHandle.m: Implemented [(-waitForDataInBackground])
	* src/UnixFileHandle.m: Implemented [(-waitForDataInBackground])
	* src/include/NSFileHandle.h: Added [(-waitForDataInBackground])
	* src/externs.m: Fixed error in hash callbacks name.
	* src/Set.m: Fixed error in hash callbacks name.
	* src/include/NSHashTable.h: Fixed error in hash callbacks name.
	* src/NSRunLoop.m: minor efficiency hack - don't use autoreleasing
	arrray construction methods when we are going to retain immediately.

Fri Sep 04 08:05:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSUserDefaults.m: ([-setObjectsforKey:], [-removeObjectForKey:])
	fixed to make domain dictionarys mutable if required.
	* src/externs.m: Updated notification name for defaults.
	* src/include/NSUserDefaults.h: Updated notification name.
	
Mon Aug 31 16:28:58 1998  Adam Fedor  <fedor@ultra.doc.com>

	* src/NSBundle.m (+mainBundle:): Remove *_obj directory to
	find main bundle path.

Wed Sep 02 14:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/Coder.m: ([-decodeObject:]) fixed to autorelease as it should.
	* src/NSCalendarDate.m, src/NSException.m, src/NSGAttributedString.m,
	src/NSHost.m, src/NSLog.m, src/NSProcessInfo.m, src/NSTimeZone.m:
	tidied coding/decoding and logging.
	* src/NSString.m: Added implementation of [-zone] for constnat strings.

Wed Sep 02 13:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSRunLoop.m: ([-cancelPerformSelector:target:argument:]) bugfix
	supplied by masata-y@is.aist-nara.ac.jp - was incrementing loop index
	when should have been decrementing.

Mon Aug 24 09:22:17 1998  Adam Fedor  <fedor@ultra.doc.com>

	* doc/gnustep-base.tmpl.texi: Fix up doc problems.
	* doc/todo.tmpl.texi: Likewise.

Thu Aug 20 11:50:23 1998  Adam Fedor  <fedor@doc.com>

	* src/mframe.m (mframe_next_arg): Fixes from Richard